--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -5,26 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".activity.RegisterActivity">
+    tools:context=".activity.RegisterActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:background="@color/gray_light">
+        android:layout_weight="0.35"
+        android:background="@drawable/bg_gradient">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_63sdp"
+            android:layout_height="@dimen/_45sdp"
             android:layout_centerInParent="true"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo" />
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.7"
-        android:background="@color/white">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.65"
+        android:background="@color/white"
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,9 +42,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/daftar"
-                android:fontFamily="@font/poppins_bold"
-                android:textSize="@dimen/_12ssp"
-                android:textColor="@color/black" />
+                android:fontFamily="@font/segoe_ui"
+                android:textSize="@dimen/_13ssp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
             <View
                 android:layout_width="@dimen/paddingXXXXXLarge"
@@ -51,7 +56,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/_40sdp"
                 app:hintTextAppearance="@style/TextLabel"
                 app:passwordToggleEnabled="true">
 
@@ -60,8 +65,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
-                    android:fontFamily="@font/poppins_regular"
-                    android:textSize="@dimen/_12ssp"
+                    android:fontFamily="@font/segoe_ui"
+                    android:textSize="@dimen/_10ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textEmailAddress"
                     android:singleLine="true" />
@@ -70,7 +75,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/_8sdp"
                 app:hintTextAppearance="@style/TextLabel"
                 app:passwordToggleEnabled="true">
 
@@ -79,8 +84,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/kata_sandi"
-                    android:fontFamily="@font/poppins_regular"
-                    android:textSize="@dimen/_12ssp"
+                    android:fontFamily="@font/segoe_ui"
+                    android:textSize="@dimen/_10ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
                     android:singleLine="true"
@@ -90,7 +95,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/_8sdp"
                 app:hintTextAppearance="@style/TextLabel"
                 app:passwordToggleEnabled="true">
 
@@ -100,8 +105,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/ulang_kata_sandi"
                     android:imeOptions="flagNoExtractUi"
-                    android:fontFamily="@font/poppins_regular"
-                    android:textSize="@dimen/_12ssp"
+                    android:fontFamily="@font/segoe_ui"
+                    android:textSize="@dimen/_10ssp"
                     android:inputType="textPassword"
                     android:singleLine="true"
                     android:textColorHint="@color/green_dark" />
@@ -112,20 +117,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checked="false"
-                android:fontFamily="@font/poppins_regular"
-                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/segoe_ui"
+                android:textSize="@dimen/_6ssp"
                 android:buttonTint="@color/green_dark"
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:text="@string/privacy_policy" />
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:background="@color/green_dark"
                 android:clickable="true"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_11ssp"
+                android:fontFamily="@font/segoe_ui"
                 android:id="@+id/btn_daftar"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/daftar"
@@ -134,7 +139,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingXXXXXLarge"
+                android:layout_marginTop="@dimen/_25sdp"
                 android:layout_marginBottom="@dimen/paddingLarge"
                 android:orientation="horizontal">
 
@@ -142,23 +147,24 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/poppins_regular"
-                    android:textSize="@dimen/_12ssp"
+                    android:fontFamily="@font/segoe_ui"
+                    android:textSize="@dimen/_10ssp"
                     android:text="@string/memiliki_akun" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
-                    android:fontFamily="@font/poppins_bold"
-                    android:textSize="@dimen/_12ssp"
+                    android:fontFamily="@font/segoe_ui"
+                    android:textSize="@dimen/_10ssp"
                     android:id="@+id/btn_masuk"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingLeft="@dimen/paddingSmall"
                     android:paddingRight="@dimen/paddingSmall"
                     android:text="@string/masuk"
                     android:textAllCaps="true"
-                    android:textColor="@color/green_dark" />
+                    android:textColor="@color/green_dark"
+                    android:textStyle="bold"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
