--- a/app/src/main/res/layout-land/activity_sign_in.xml
+++ b/app/src/main/res/layout-land/activity_sign_in.xml
@@ -5,26 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".activity.SignInActivity">
+    tools:context=".activity.SignInActivity"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:background="@color/gray_light">
+        android:layout_weight="0.35"
+        android:background="@drawable/bg_gradient">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_63sdp"
+            android:layout_height="@dimen/_45sdp"
             android:layout_centerInParent="true"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo" />
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.7"
-        android:background="@color/white">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.65"
+        android:background="@color/white"
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,10 +43,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login"
-                android:fontFamily="@font/poppins_bold"
-                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/segoe_ui"
+                android:textSize="@dimen/_14ssp"
                 android:textColor="@color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textAllCaps="true"/>
 
             <View
                 android:layout_width="@dimen/paddingXXXXXLarge"
@@ -53,7 +58,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/_60sdp"
                 app:hintTextAppearance="@style/TextLabel"
                 app:passwordToggleEnabled="true">
 
@@ -62,7 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:textSize="@dimen/_12ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textEmailAddress"
@@ -72,7 +77,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginTop="@dimen/_8sdp"
                 app:hintTextAppearance="@style/TextLabel"
                 app:passwordToggleEnabled="true">
 
@@ -81,7 +86,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/kata_sandi"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:textSize="@dimen/_12ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
@@ -92,12 +97,12 @@
             <Button
                 android:id="@+id/btn_masuk"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_marginTop="@dimen/_25sdp"
                 android:background="@color/green_dark"
                 android:clickable="true"
                 android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/poppins_bold"
+                android:fontFamily="@font/segoe_ui"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/masuk"
                 android:textColor="@color/white" />
@@ -105,7 +110,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingXXXXXLarge"
+                android:layout_marginTop="@dimen/_40sdp"
                 android:layout_marginBottom="@dimen/paddingLarge"
                 android:orientation="horizontal">
 
@@ -113,7 +118,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:textSize="@dimen/_12ssp"
                     android:text="@string/belum_memiliki" />
 
@@ -122,13 +127,14 @@
                     android:layout_height="wrap_content"
                     android:clickable="true"
                     android:id="@+id/btn_daftar"
-                    android:fontFamily="@font/poppins_bold"
+                    android:fontFamily="@font/segoe_ui"
                     android:textSize="@dimen/_12ssp"
                     android:foreground="?attr/selectableItemBackground"
                     android:paddingLeft="@dimen/paddingSmall"
                     android:paddingRight="@dimen/paddingSmall"
                     android:text="@string/daftar"
                     android:textAllCaps="true"
+                    android:textStyle="bold"
                     android:textColor="@color/green_dark" />
             </LinearLayout>
         </LinearLayout>
