--- a/app/src/main/res/layout-land/fragment_penjualan.xml
+++ b/app/src/main/res/layout-land/fragment_penjualan.xml
@@ -55,7 +55,8 @@
                 android:layout_weight="1"
                 android:text="@string/nama"
                 android:textAllCaps="true"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone"/>
 
             <TextView
                 android:layout_width="0dp"
