--- a/app/src/main/res/layout-land/item_daftar_pelanggan.xml
+++ b/app/src/main/res/layout-land/item_daftar_pelanggan.xml
@@ -40,7 +40,8 @@
             android:text="1000"
             android:fontFamily="@font/poppins_regular"
             android:textAllCaps="true"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tv_kelamin"
