--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -34,7 +34,7 @@
                 android:text="@string/daftar"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/poppins_black"
+                android:fontFamily="@font/segoe_ui"
                 android:textStyle="bold" />
 
             <View
@@ -55,7 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:textSize="@dimen/_12ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textEmailAddress"
@@ -74,7 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/kata_sandi"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:textSize="@dimen/_12ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
@@ -94,7 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/ulang_kata_sandi"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:textSize="@dimen/_12ssp"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
@@ -108,19 +108,19 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/poppins_regular"
+                android:fontFamily="@font/segoe_ui"
                 android:buttonTint="@color/green_dark"
                 android:layout_marginTop="@dimen/paddingXXXXXLarge"
                 android:text="@string/privacy_policy" />
 
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_35sdp"
                 android:layout_marginTop="@dimen/_25sdp"
                 android:background="@color/green_dark"
                 android:clickable="true"
                 android:textSize="@dimen/_13ssp"
-                android:fontFamily="@font/poppins_bold"
+                android:fontFamily="@font/segoe_ui"
                 android:id="@+id/btn_daftar"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/daftar"
@@ -138,14 +138,14 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="@dimen/_12ssp"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:text="@string/memiliki_akun" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
-                    android:fontFamily="@font/poppins_bold"
+                    android:fontFamily="@font/segoe_ui"
                     android:textSize="@dimen/_12ssp"
                     android:id="@+id/btn_masuk"
                     android:foreground="?attr/selectableItemBackground"
@@ -153,6 +153,7 @@
                     android:paddingRight="@dimen/paddingSmall"
                     android:text="@string/masuk"
                     android:textAllCaps="true"
+                    android:textStyle="bold"
                     android:textColor="@color/green_dark" />
             </LinearLayout>
         </LinearLayout>
