--- a/app/src/main/res/layout-land/activity_pembayaran.xml
+++ b/app/src/main/res/layout-land/activity_pembayaran.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.PembayaranActivity">
+    tools:context=".activity.PembayaranActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
