--- a/app/src/main/res/layout-land/activity_register_informasi_usaha.xml
+++ b/app/src/main/res/layout-land/activity_register_informasi_usaha.xml
@@ -12,12 +12,12 @@
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:background="@color/gray_light">
+        android:layout_weight="0.35"
+        android:background="@drawable/bg_gradient">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_63sdp"
+            android:layout_height="@dimen/_45sdp"
             android:layout_centerInParent="true"
             android:src="@drawable/logo"/>
     </RelativeLayout>
@@ -52,8 +52,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/info_usaha"
-                        android:textSize="@dimen/_12ssp"
-                        android:fontFamily="@font/poppins_bold"
+                        android:textSize="@dimen/_13ssp"
+                        android:fontFamily="@font/segoe_ui"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
@@ -77,7 +77,7 @@
                         android:paddingRight="@dimen/paddingMedium"
                         android:paddingBottom="@dimen/paddingXSmall"
                         android:text="1"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="@dimen/_11ssp"
                         android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
@@ -98,7 +98,7 @@
                         android:paddingRight="@dimen/paddingMedium"
                         android:paddingBottom="@dimen/paddingXSmall"
                         android:text="2"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="@dimen/_11ssp"
                         android:fontFamily="@font/poppins_bold"
                         android:textColor="@android:color/darker_gray"
                         android:textStyle="bold" />
