--- a/app/src/main/res/layout-land/activity_register_masukan_produk.xml
+++ b/app/src/main/res/layout-land/activity_register_masukan_produk.xml
@@ -5,26 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".activity.RegisterMasukanProdukActivity">
+    tools:context=".activity.RegisterMasukanProdukActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:background="@color/gray_light">
+        android:layout_weight="0.35"
+        android:background="@drawable/bg_gradient">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_63sdp"
+            android:layout_height="@dimen/_45sdp"
             android:layout_centerInParent="true"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo" />
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.7"
-        android:background="@color/white">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.65"
+        android:background="@color/white"
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,8 +54,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/masukan_produk"
-                        android:textSize="@dimen/_12ssp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="@dimen/_13ssp"
+                        android:fontFamily="@font/segoe_ui"
                         android:textColor="@color/black"
                         android:textStyle="bold" />
 
@@ -74,7 +78,7 @@
                         android:paddingTop="@dimen/paddingXSmall"
                         android:paddingRight="@dimen/paddingMedium"
                         android:paddingBottom="@dimen/paddingXSmall"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="@dimen/_11ssp"
                         android:fontFamily="@font/poppins_bold"
                         android:text="1"
                         android:textColor="@color/white"
@@ -97,7 +101,7 @@
                         android:paddingRight="@dimen/paddingMedium"
                         android:paddingBottom="@dimen/paddingXSmall"
                         android:text="2"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="@dimen/_11ssp"
                         android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
@@ -105,7 +109,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -163,8 +167,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/nama_produk"
-                        android:textSize="@dimen/_12ssp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/segoe_ui"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -183,7 +187,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/_11ssp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:fontFamily="@font/segoe_ui"
                         android:text="Satuan" />
 
 
@@ -228,8 +232,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/kategori_produk"
-                        android:textSize="@dimen/_12ssp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/segoe_ui"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -248,8 +252,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/stok"
-                        android:textSize="@dimen/_12ssp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/segoe_ui"
                         android:inputType="number"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
@@ -278,8 +282,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/modal"
                         android:inputType="number"
-                        android:textSize="@dimen/_12ssp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/segoe_ui"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -299,8 +303,8 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/jual"
                         android:inputType="number"
-                        android:textSize="@dimen/_12ssp"
-                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/segoe_ui"
                         android:imeOptions="flagNoExtractUi"
                         android:singleLine="true"/>
                 </com.google.android.material.textfield.TextInputLayout>
@@ -310,13 +314,13 @@
             <Button
                 android:id="@+id/btn_lanjut"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingXLarge"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/paddingXLarge"
                 android:background="@color/green_dark"
                 android:clickable="true"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/poppins_bold"
+                android:textSize="@dimen/_11ssp"
+                android:fontFamily="@font/segoe_ui"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/lanjutkan"
                 android:textColor="@color/white" />
