--- a/app/src/main/res/layout-land/dialog_tambah_pelanggan.xml
+++ b/app/src/main/res/layout-land/dialog_tambah_pelanggan.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -60,7 +62,8 @@
                 android:text="@string/poin"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/poppins_bold" />
+                android:fontFamily="@font/poppins_bold"
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/txt_point"
@@ -80,7 +83,8 @@
                 android:paddingBottom="@dimen/paddingXSmall"
                 android:fontFamily="@font/poppins_regular"
                 android:textSize="@dimen/_12ssp"
-                android:text="0" />
+                android:text="0"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
@@ -203,7 +207,7 @@
             <Button
                 android:id="@+id/btn_submit"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
