--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -15,7 +15,7 @@
             android:id="@+id/ll_main"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="6"
+            android:layout_weight="6.5"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -60,14 +60,14 @@
                     <FrameLayout
                         android:id="@+id/lay_barcode_scanner"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_above="@id/tabs"
                         android:visibility="gone"></FrameLayout>
 
                     <com.google.android.material.tabs.TabLayout
                         android:id="@+id/tabs"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_35sdp"
                         android:layout_alignParentBottom="true"
                         app:tabIndicatorColor="@color/green_dark"
                         app:tabMode="scrollable"
@@ -211,7 +211,7 @@
             android:id="@+id/ll_pesanan"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="4">
+            android:layout_weight="3.5">
 
 
             <com.google.android.material.tabs.TabLayout
@@ -265,8 +265,8 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:foreground="?attr/selectableItemBackground"
-                    android:paddingLeft="@dimen/paddingSmall"
-                    android:paddingRight="@dimen/paddingSmall"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:paddingRight="@dimen/_10sdp"
                     android:src="@drawable/ic_save"
                     android:visibility="gone" />
 
@@ -279,8 +279,8 @@
                     android:focusable="true"
                     android:tint="@color/green_dark"
                     android:foreground="?attr/selectableItemBackground"
-                    android:paddingLeft="@dimen/paddingSmall"
-                    android:paddingRight="@dimen/paddingSmall"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:paddingRight="@dimen/_10sdp"
                     android:src="@drawable/ic_delete"
                     android:visibility="gone" />
 
@@ -312,7 +312,7 @@
                     <Button
                         android:id="@+id/btn_bayar"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_35sdp"
                         android:background="@color/green_dark"
                         android:fontFamily="@font/poppins_bold"
                         android:textSize="@dimen/_12ssp"
