--- a/app/src/main/res/layout-land/item_penjualan.xml
+++ b/app/src/main/res/layout-land/item_penjualan.xml
@@ -26,7 +26,8 @@
             android:layout_weight="1"
             android:text="Tanpa Pelanggan"
             android:id="@+id/txt_pelanggan"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/txt_tanggal"
