--- a/app/src/main/res/layout-sw600dp/activity_daftar_pesanan.xml
+++ b/app/src/main/res/layout-sw600dp/activity_daftar_pesanan.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.DaftarPesananActivity">
+    tools:context=".activity.DaftarPesananActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
