--- a/app/src/main/res/layout-sw600dp/activity_register_informasi_usaha.xml
+++ b/app/src/main/res/layout-sw600dp/activity_register_informasi_usaha.xml
@@ -6,27 +6,28 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-
+    android:background="@color/white"
     tools:context=".activity.RegisterInformasiUsahaActivity">
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:background="@color/gray_light">
+        android:layout_weight="0.35"
+        android:background="@drawable/bg_gradient">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_63sdp"
+            android:layout_height="@dimen/_45sdp"
             android:layout_centerInParent="true"
             android:src="@drawable/logo"/>
     </RelativeLayout>
 
     <androidx.core.widget.NestedScrollView
     android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="0.7"
-    android:background="@color/white">
+    android:layout_height="wrap_content"
+    android:layout_weight="0.65"
+    android:background="@color/white"
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
