--- a/app/src/main/res/layout-sw600dp/app_bar_main.xml
+++ b/app/src/main/res/layout-sw600dp/app_bar_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.MainActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -51,19 +53,21 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="NAMA RESTORAN"
-                                android:fontFamily="@font/poppins_bold"
+                                android:fontFamily="@font/segoe_ui"
                                 android:textColor="@color/black"
-                                android:textSize="@dimen/_9ssp" />
+                                android:textSize="@dimen/_7ssp"
+                                android:textStyle="bold"/>
 
 
                             <TextView
                                 android:id="@+id/tv_name_kasir"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/_2sdp"
                                 android:text="Budi Setiawan"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/segoe_ui"
                                 android:textColor="@color/black"
-                                android:textSize="@dimen/_8ssp" />
+                                android:textSize="@dimen/_6ssp" />
 
                         </LinearLayout>
 
@@ -85,7 +89,7 @@
                                 android:background="@drawable/bg_edittext_rounded"
                                 android:focusableInTouchMode="true"
                                 android:hint="@string/pencarian"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/segoe_ui"
                                 android:imeOptions="actionSearch|flagNoExtractUi"
                                 android:inputType="text"
                                 android:maxLines="1"
@@ -95,7 +99,8 @@
                                 android:paddingBottom="@dimen/paddingXSmall"
                                 android:singleLine="true"
                                 android:textColor="@android:color/black"
-                                android:textColorHint="@color/gray_txt" />
+                                android:textColorHint="@color/gray_txt"
+                                android:textSize="@dimen/_6sdp" />
 
                             <ImageView
                                 android:visibility="gone"
@@ -159,7 +164,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:backgroundTint="@color/black" />
+                            android:backgroundTint="@color/black"
+                            android:visibility="visible"/>
 
 
                         <ImageView
@@ -207,7 +213,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_penjualan"
