--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".activity.SignInActivity">
+    tools:context=".activity.SignInActivity"
+    android:focusableInTouchMode="true"
+    android:focusable="true">
 
     <View
         android:layout_width="0dp"
@@ -34,8 +36,10 @@
                 android:layout_height="wrap_content"
                 android:text="@string/login"
                 android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/poppins_black"
-                android:textColor="@color/black" />
+                android:fontFamily="@font/segoe_ui"
+                android:textColor="@color/black"
+                android:textAllCaps="true"
+                android:textStyle="bold"/>
 
             <View
                 android:layout_width="@dimen/paddingXXXXXLarge"
@@ -55,7 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textEmailAddress"
                     android:textSize="@dimen/_12ssp"
@@ -74,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/kata_sandi"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="textPassword"
                     android:textSize="@dimen/_12ssp"
@@ -88,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_25sdp"
                 android:background="@color/green_dark"
-                android:fontFamily="@font/poppins_bold"
+                android:fontFamily="@font/segoe_ui"
                 android:foreground="?attr/selectableItemBackground"
                 android:text="@string/masuk"
                 android:textColor="@color/white" />
@@ -102,7 +106,7 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/segoe_ui"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="@dimen/_12ssp"
@@ -117,10 +121,12 @@
                     android:paddingLeft="@dimen/paddingSmall"
                     android:paddingRight="@dimen/paddingSmall"
                     android:text="@string/daftar"
-                    android:fontFamily="@font/poppins_bold"
+                    android:fontFamily="@font/segoe_ui"
+                    android:textStyle="bold"
                     android:textSize="@dimen/_12ssp"
                     android:textAllCaps="true"
-                    android:textColor="@color/green_dark" />
+                    android:textColor="@color/green_dark"
+                    />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
