--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -136,7 +136,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:backgroundTint="@color/black" />
+                            android:backgroundTint="@color/black"
+                            android:visibility="visible"/>
 
                         <EditText
                             android:id="@+id/edt_search"
