--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -309,7 +309,7 @@
                     <Button
                         android:id="@+id/btn_bayar"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/_35sdp"
                         android:fontFamily="@font/poppins_bold"
                         android:textSize="@dimen/_10ssp"
                         android:background="@color/green_dark"
