--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="green_dark">#F05027</color>
+    <color name="green_dark">#223F99</color>
     <color name="green">#F1FAE7</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
@@ -17,7 +17,7 @@
     <color name="gray_darker">#D3D3D3</color>
     <color name="gray_dark">#F5F5F5</color>
     <color name="bg_reservasi">#FFF2DE</color>
-    <color name="txt_reservasi">#ED970E</color>
+    <color name="txt_reservasi">#223F99</color>
 
 
     <color name="bg_ungu">#B3A3D5</color>
